[tool.poetry]
name = "theta-python"
version = "0.1.0"
description = "Support libraries for using Theta types from Python"
authors = ["Target Brands, Inc"]
license = "Apache License, Version 2.0"
packages = [
    { include = "python/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
hypothesis = "^6.36.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
