cabal-version:  2.2
name:           theta
version:        1.0.1.2
synopsis:       Share algebraic data types across different languages with Avro.
description:    Use algebraic data types to define data formats that work across different languages. Theta lets you use a single set of types to generate Avro schemas as well as types that serialize and deserialize to those schemas in Python, Haskell and Rust.
license:        Apache-2.0
category:       Language
build-type:     Simple
maintainer:     Tikhon Jelvis <tikhon@jelv.is>
data-files:
  test/data/modules/*.theta
  test/data/transitive/*.theta
  test/data/root-1/*.theta
  test/data/root-2/*.theta
  test/data/root-3/com/*.theta
  test/data/root-3/com/example/*.theta
  test/data/root-3/com/example/nested/*.theta

  test/data/python/*.mustache
  test/data/rust/*.rs

common shared
  default-language: Haskell2010
  ghc-options: -Wall
               -Wincomplete-uni-patterns
               -Wincomplete-record-updates

               -Wno-name-shadowing
               -Wno-type-defaults
               -Wno-unused-do-bind

               -- turn off warning from C preprocess on macOS
               -optP-Wno-nonportable-include-path
  build-depends: base >=4.13 && <4.16

               , aeson
               , aeson-pretty >=0.8.9 && <0.9
               , avro >=0.6 && <0.7
               , binary
               , bytestring
               , containers
               , deepseq
               , Diff ==0.4.*
               , directory
               , exceptions
               , filepath
               , hashable
               , indexed-traversable
               , monad-control
               , megaparsec
               , mtl
               , prettyprinter
               , prettyprinter-ansi-terminal
               , pureMD5
               , PyF == 0.10.*
               , QuickCheck
               , streamly ==0.8.1.*
               , streamly-bytestring ==0.1.4
               , streamly-process ==0.2.*
               , template-haskell
               , text
               , tagged
               , tasty-hunit
               , th-lift-instances ==0.1.*
               , time
               , tree-diff >=0.2 && <0.3
               , unordered-containers
               , uuid ==1.3.*
               , vector
               , versions ==5.*

flag isStatic
  manual: True
  default: False

library
  import:             shared
  hs-source-dirs:     src/

  exposed-modules:    Theta.Error
                    , Theta.Fixed
                    , Theta.Hash
                    , Theta.Import
                    , Theta.LoadPath
                    , Theta.Metadata
                    , Theta.Name
                    , Theta.Parser
                    , Theta.Pretty
                    , Theta.Primitive
                    , Theta.Types
                    , Theta.Value
                    , Theta.Versions

                    , Theta.Target.Avro.Error
                    , Theta.Target.Avro.Process
                    , Theta.Target.Avro.Types
                    , Theta.Target.Avro.Values

                    , Theta.Target.Haskell
                    , Theta.Target.Haskell.Conversion
                    , Theta.Target.Haskell.HasTheta

                    , Theta.Target.Kotlin
                    , Theta.Target.Kotlin.QuasiQuoter

                    , Theta.Target.LanguageQuoter

                    , Theta.Target.Python
                    , Theta.Target.Python.QuasiQuoter

                    , Theta.Target.Rust
                    , Theta.Target.Rust.QuasiQuoter

                    , Theta.Test.Assertions

test-suite tests
  import:             shared
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:      Test.Theta.Error
                    , Test.Theta.Import
                    , Test.Theta.LoadPath
                    , Test.Theta.Name
                    , Test.Theta.Parser
                    , Test.Theta.Types
                    , Test.Theta.Value
                    , Test.Theta.Versions

                    , Test.Theta.Target.Avro.Process
                    , Test.Theta.Target.Avro.Types
                    , Test.Theta.Target.Avro.Values

                    , Test.Theta.Target.Haskell
                    , Test.Theta.Target.Haskell.Conversion

                    , Test.Theta.Target.Kotlin

                    , Test.Theta.Target.Python
                    , Test.Theta.Target.Python.QuasiQuoter

                    , Test.Theta.Target.Rust

                    , Paths_theta

  autogen-modules:    Paths_theta


  build-depends:      theta

                    , stache >=2.3.1 && <3
                    , tasty
                    , tasty-golden
                    , tasty-hunit
                    , tasty-quickcheck

executable theta
  import:             shared
  hs-source-dirs:     apps/
  build-depends:      theta

                    , optparse-applicative

  main-is:            Theta.hs
  other-modules:      Apps.Avro
                    , Apps.Hash
                    , Apps.Kotlin
                    , Apps.List
                    , Apps.Python
                    , Apps.Rust
                    , Apps.Subcommand

  if flag(isStatic)
    ghc-options: -optl=-static -optl=-pthread -static
    ld-options: -static
